# crewai-research-writer-multi-agent

./: README.md  hello.py  pyproject.toml
poem_generator/: README.md  pyproject.toml  report.md
poem_generator/src/poem_generator/: crew.py  main.py
