[project]
name = "poem_generator"
version = "0.1.0"
description = "poem-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
poem_generator = "poem_generator.main:run"
run_crew = "poem_generator.main:run"
train = "poem_generator.main:train"
replay = "poem_generator.main:replay"
test = "poem_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
